<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextMain"
        android:text="Hello World!"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:id="@+id/l1"
        android:layout_below="@id/txt"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/ed_txt"
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginRight="3dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp" />

        <EditText
            android:id="@+id/ed_txt2"
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="3dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/sum"
            android:text="@string/sum"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"/>

        <Button
            android:id="@+id/sub"
            android:text="@string/sub"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"/>

        <Button
            android:id="@+id/mult"
            android:text="@string/mult"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"/>

        <Button
            android:id="@+id/div"
            android:text="@string/div"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"/>

    </LinearLayout>

</RelativeLayout>